--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -74,7 +74,7 @@ jobs:
             image="${image%%@*}"
             echo "image $image"
             # 获取镜像名:版本号  例如nginx:1.25.3
-            image_name_tag=$(echo "$image" | sed 's/\//*/')
+            image_name_tag=$(echo "$image" | sed 's/\//_/g')
             echo "image_name_tag $image_name_tag"
             # 获取命名空间 例如kasmweb,  这里有种特殊情况 docker.io/nginx，把docker.io当成命名空间，也OK
             name_space=$(echo "$image" | awk -F'/' '{if (NF==3) print $2; else if (NF==2) print $1; else print ""}')
@@ -121,7 +121,7 @@ jobs:
             image=$(echo "$line" | awk '{print $NF}')
 
             # 获取 镜像名:版本号  例如nginx:1.25.3
-            image_name_tag=$(echo "$image" | sed 's/\//*/')
+            image_name_tag=$(echo "$image" | sed 's/\//_/g')
             # 获取命名空间 例如kasmweb  这里有种特殊情况 docker.io/nginx，把docker.io当成命名空间，也OK
             name_space=$(echo "$image" | awk -F'/' '{if (NF==3) print $2; else if (NF==2) print $1; else print ""}')
             # 获取镜像名例  例如nginx
